# sudoku-nisq-benchmark

./: .gitignore  INSTRUCCIONES.md  README.md  pre_eval_run.py  pyproject.toml  pytest.ini  test.py  test_caching.py
.github/workflows/: ci.yml
notebooks/: demo.ipynb  demo_experiment.csv  experiments-demo.ipynb
notebooks/demo_cache/: seen_index.json
notebooks/demo_cache/1d2d15a681cf66d5350cb3981d979d6152f2ae5554b19ffd1f0745e57e88b2b2/: metadata.json
notebooks/demo_cache/1d2d15a681cf66d5350cb3981d979d6152f2ae5554b19ffd1f0745e57e88b2b2/ExactCoverQuantumSolver/pattern/: main_circuit.json
notebooks/demo_cache/2e0d300c40a86c7136d7fd6bb50d89764600ea8de2ba04ffb8ac392c1217e178/: metadata.json
notebooks/demo_cache/3d46c94626f3bfd590a42ad7e35cb70d8a601500da4430e8f126a949493b7682/: metadata.json
notebooks/demo_cache/7f68bcf465b9d40459360a9f4cf67263227490a1001428c1ac81aa94324b8863/: metadata.json
notebooks/demo_cache/ce377247ae3449a469a499dcd9b84c10b709878093280d1e2783a708ab2b8ff9/: metadata.json
notebooks/demo_cache/d6d5713893ca50df092c48b099d9eeb4e1a22fbd2184ea9db3bfa3cfa503b8fa/: metadata.json
notebooks/sandbox/: test copy.ipynb  test.ipynb
src/sudoku_nisq/: __init__.py  backends.py  backtracking_solver.py  board.py  data copy.py  data.py  exact_cover_encoding.py  exact_cover_solver.py  experiment_runner.py  graph_coloring_solver.py  metadata_manager.py  pattern_generation.py  q_sudoku.py  quantum.py  quantum_solver.py  sudoku_pattern_generation.py  sudoku_puzzle.py
tests/: integration_test_csv.py  test_backends.py  test_csv_functionality.py  test_duplication_fix.py  test_exact_cover_solver.py  test_imports.py  test_metadata_manager.py  test_q_sudoku.py  test_quantum_solver.py
(+8 files in other folders)
