[project]
name = "sudoku-nisq-benchmark"
version = "0.1.0"
description = "Framework designed to demonstrate how Sudoku puzzles can serve as a accessible benchmarking problems for near-term quantum computers."
authors = [
    {name = "Club de Computacion Cuantica"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "pytket (>=2.6.0,<3.0.0)",
    "pytket-qiskit (>=0.68.0,<0.69.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "py-sudoku (>=2.0.0,<3.0.0)",
    "sudoku-py (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [
  { include = "sudoku_nisq", from = "src" }
]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
